# mace-openmm

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  test_script.sh
examples/: example_david.ipynb  run_md_example.ipynb
mace_openmm/: compute_neq_dG.py  mixed_system.py  openmm_tools.py
mace_openmm/entrypoints/: run_md.py
mace_openmm/scripts/: h5_to_trr.py  run_md.py
tests/: test_md.py
tests/example_data/: 5i.sdf  5n.sdf  5n.xyz  butane.sdf  ejm_31.sdf  mace_model_swa.model  mace_spice.model  md_test_mace.pt  openmm_MACE.pt  periodic_system.xyz  periodic_system_clean.xyz  test_mol.xyz  test_one_mol.xyz
