[metadata]
name = mace-openmm
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
	# only the openmm dependencies
	openmm
	openmmtools
	openmmml
	pytest
	
    torch>=1.8
    # e3nn==0.4.4
    numpy
    # opt_einsum
    ase
	# mace==0.1.0
    # torch-ema
    # prettytable
    # # for plotting:
    # matplotlib
    # pandas
    # torch_nl
[options.entry_points]
console_scripts =
	mace-md = mace_openmm.scripts.run_md:main